modified multiple .md files to support sitemap: true

--- a/_posts/2018-05-27-finally.md
+++ b/_posts/2018-05-27-finally.md
@@ -4,7 +4,8 @@ title:  "Finally"
 date:   2018-05-27 16:10:00
 img:
 description: More updates on web page.
-categories: musings status
+categories: [musings, status]
+sitemap: true
 ---
 I've got it working and it's just Sunday afternoon.
 
